@@ -8,6 +8,8 @@ cupt (2.0.0~rc1~) UNRELEASED; urgency=low
     - system/resolvers/native:
       - Fixed an algorithmic bug in calculating error trees when no solutions
         are found, which might lead to incorrect trees sometimes.
+      - Output a warning about no effect when 'apt::install-<X>' option is set
+        but 'cupt::resolver::keep-<X>' option is unset.
 
  -- Eugene V. Lyubimkin <jackyf@debian.org>  Wed, 23 Mar 2011 09:59:32 +0200
 
